# yourmirror

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_LLM.md  README_LLM_RU.md  fill_fixtures.py  manage.py  pyproject.toml
.github/actions/export-env/: action.yaml
.github/workflows/: ci.yaml
backend/: Dockerfile  Makefile  entrypoint.sh  fill_fixtures.py  manage.py  pyproject.toml
backend/context_processors/: footer.py
backend/profiles/: apps.py  forms.py  models.py  urls.py  views.py
backend/profiles/templates/: follow_button.html  following.html
backend/profiles/templates/settings/: form_field.html  main.html
backend/profiles/templatetags/: active_url.py
backend/services/: admin.py  forms.py  models.py  urls.py  views.py
backend/services/migrations/: 0001_initial.py  0002_alter_registrationtokenmodel_token.py  0003_registrationtokenmodel_wishitem.py
backend/static/js/: home.js  share.js  user_settings.js
backend/static/js/wishitem/: anon_reserve_modal.js  first_reservation_modal.js  image_upload.js
backend/static/js/wishlist/: share_button.js
backend/tasks/: confirmation_email.py  email.py
backend/telewish/: asgi.py  settings.py  wsgi.py
backend/templates/: 403.html  404.html  500.html  base.html  favicon.html  footer.html  header.html  home.html  main_button.html
backend/templates/buttons/: base_button.html  form_action_button.html  form_button.html  form_checkbox.html  form_submit_button.html
backend/templates/emails/: confirm_first_reservation.html  reservation_email.html
backend/templates/registration/: confirmation_failed.html  email_sent.html  field.html  form_field.html  login.html  register.html
backend/tests/: conftest.py  factories.py  test_auth.py  test_profiles.py  test_services.py  test_user_settings.py  test_wishitems.py  test_wishlist.py  values.py
backend/theme/static_src/: package-lock.json
backend/theme/static_src/src/: styles.css
backend/wishitems/: admin.py  forms.py  models.py  urls.py  views.py
backend/wishitems/migrations/: 0001_initial.py  0002_wishitemmodel_price_wishitemmodel_price_currency.py  0003_alter_wishitemmodel_reserved_at.py
backend/wishitems/templates/wishitem/: anon_reserve_modal.html  delete.html  detail.html  form.html  form_field.html
backend/wishitems/templates/wishitem/widgets/: custom_clearable_file_input.html
backend/wishitems/templates/wishlist/: add_item_button.html  item.html  my.html  profile.html  share_button.html
backend/yourmirror/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/yourmirror/settings/: base.py  dev.py  prod.py  test.py
profiles/: admin.py  forms.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_followmodel_following_alter_followmodel_user.py
profiles/templates/: follow_button.html  following.html
services/link_preview/: Makefile  app.py  pyproject.toml
telewish/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  footer.html  header.html  home.html  main_button.html  nav.html
templates/flatpages/: default.html
templates/registration/: logged_out.html  login.html
tests/: conftest.py  factories.py  test_auth.py  test_profiles.py  test_wishitems.py  values.py
theme/static_src/src/: styles.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_follow.py
users/templates/: profile.html  register.html
users/templatetags/: active_url.py
wishitems/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
wishitems/migrations/: 0001_initial.py  0002_wishitemmodel_slug.py  0003_wishitemmodel_reserved_wishitemmodel_reserved_at.py  0004_alter_wishitemmodel_options.py
wishitems/templates/: wishitem_delete.html  wishitem_detail.html  wishitem_form.html  wishlist.html  wishlist_items.html  wishlist_retrieve.html
wishitems/templates/wishlist/: add_item_button.html  button.html  item.html  my.html  profile.html
