[project]
name = "your_mirror"
version = "1.0.0"
description = "Your minimalistic wishlist with a friendly tg-bot"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["backend", "services/*"]

[tool.uv]
default-groups = ["lint", "test"]

[dependency-groups]
test = [
    "pytest>=8.3.4",
]
lint = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]
