[project]
name = "yourmirror"
version = "1.0.0"
description = "Your minimalistic wishlist with a friendly tg-bot"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["backend", "services/*"]

[dependency-groups]
test = [
    "pytest>=8.3.4",
]
lint = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.9.6",
]
