[project]
name = "yourmirror.service.link_preview"
version = "1.0.0"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "litestar[standard]>=2.14.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
lint = []

[tool.mypy]
ignore_missing_imports = true


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]
